--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <div class="loading">
     <div class="loading-icon"></div>
-    <div class="loading-text">加载中...</div>
+    <div class="loading-text">正在下载...</div>
   </div>
   <div class="error-message" id="error-message" style="display: none;">
     由于网络原因，页面加载失败。请检查网络或稍后重试。
